--- a/templates/revisionses_dt.html
+++ b/templates/revisionses_dt.html
@@ -79,9 +79,7 @@ function sourseViewerClose(){
               <div class="row">
 		          <div class="panel panel-grey">
 					<div class="panel-heading">{{ _("Revisions wiki") }} &nbsp;&nbsp;&nbsp; 
-	 					"{{ parameters.article_title if parameters.article_title else "" }}" &nbsp;&nbsp;&nbsp; 
-	 					{{ _("Autor wiki") }}: {{ parameters.article_autor if parameters.article_autor else "" }}
-	 					<!-- перейти на страницу профиля автора article_autor_id -->
+	 					"{{ parameters.article_title if parameters.article_title else "" }}"
 					</div>
               		<div class="panel-body" id='groups_list_table'>
 
@@ -95,7 +93,7 @@ function sourseViewerClose(){
 						         <th>{{ _("Fnnotation") }} </th>
 						         <th>{{ _("Edit wiki") }}</th>
 						         <th>{{ _("Viev wiki") }}</th>
-						         <th>Автор Ревизии</th>
+						         <th>{{ _("Revision Author") }}</th>
 						     </tr>
 						     </thead>
 						     <tbody>
@@ -105,7 +103,7 @@ function sourseViewerClose(){
 								     <td><a href="/{{ revision.article_link }}">{{ revision.rev_article_title }}</a></td>
 								     <td><a href="/{{ revision.article_link }}">{{ revision.article_annotation }}</a></td>
 								     <td> <span class="badge badge-blue"><a style="color: #ffffff;" href="/compose/{{ revision.article_link }}?hash={{ revision.sha_hash }}">{{ _("Edit this wiki") }}</a></span></td>
-								     <td> <span class="badge badge-orange"><a style="color: #ffffff;" href="#" onclick="sourseViewerShow('{{ revision.rev_article_title }}', '{{ revision.article_link }}', '{{ revision.sha_hash }}', '{{revision.article_source}}')">{{ _("Edit this wiki") }}</a></span></td>
+								     <td> <span class="badge badge-orange"><a style="color: #ffffff;" href="#" onclick="sourseViewerShow('{{ revision.rev_article_title }}', '{{ revision.article_link }}', '{{ revision.sha_hash }}', '{{revision.article_source}}')">{{ _("Viev this wiki") }}</a></span></td>
 								     <td><a href="/profile/{{ revision.author_id }}">{{ revision.author_name }} {{ revision.author_surname }}</a></td>
 								 </tr>
 								{% end %}
