попрвил ошибки в селектах для показа списков статей и добавил полный список статей на персональный рабочий стол

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
                     <img src="/static/images/avatar/48.jpg" alt="" class="img-responsive img-circle"/>&nbsp;<span class="hidden-xs" style="display: inline-block; width: 98px; white-space: nowrap; overflow: hidden;">{{current_user.author_name}}</span>&nbsp;<span class="caret"></span></a>
                         <ul class="dropdown-menu dropdown-user pull-right">
                             <li><a href="/profile"><i class="fa fa-user"></i>My Profile</a></li>
-                            <li><a href="/perconal_desk_top"><i class="fa fa-th-list fa-fw"></i>Мой рабочий стол</a></li>
+                            <li><a href="/personal_desk_top"><i class="fa fa-th-list fa-fw"></i>Мой рабочий стол</a></li>
                             <!-- 
                             <li><a href="#"><i class="fa fa-envelope"></i>My Inbox<span class="badge badge-danger">3</span></a></li>
                             <li><a href="#"><i class="fa fa-tasks"></i>My Tasks<span class="badge badge-success">7</span></a></li>
