--- a/templates/personal_dt.html
+++ b/templates/personal_dt.html
@@ -19,18 +19,31 @@
                   
               </div>
 
+
     	<div class="col-lg-12">
               <div class="row">
           <div class="panel panel-yellow">
-              <div class="panel-heading">{{_("Articles list")}} &nbsp;&nbsp;&nbsp; 
+              <div class="panel-heading">
+		        {{_("Personal Articles list")}} &nbsp;&nbsp;&nbsp; 
               <span class="badge badge-blue"><a style="color: #ffffff;" href="/compose">{{ _("Create new wiki") }}</a></span>
-              			</div>
+	        </div>
               <div class="panel-body" id='articles_list_table'>
               
               {% include "rest/articles_list.html" %} 
               
               </div>
           </div>
+          
+		<div class="panel panel-blue" style="background:#fff;">
+			<div class="panel-heading">
+			    {{_("Articles list")}}</div>
+			<div class="panel-body">
+			    
+			    {% include "rest/all_articles_list.html" %} 
+			    
+			</div>
+		</div>          
+          
           <div class="panel panel-green">
               <div class="panel-heading">{{_("Groups list")}}</div>
               <div class="panel-body" id="all_group_list">
