ПОправил селекты для правильного показа статей с разными уровнями доступа, начал поправлять шаблоны

--- a/templates/rest/all_articles_list.html
+++ b/templates/rest/all_articles_list.html
@@ -2,7 +2,7 @@
 
    {% if len(parameters.articlesList) > 0 %}
  
-	 <table class="table table-hover">
+	 <table class="table table-hover table-bordered">
 	     <thead>
 	     <tr>
 	         <th>Название</th>
