--- a/templates/rest/articles_group_list.html
+++ b/templates/rest/articles_group_list.html
@@ -4,7 +4,7 @@
  
    {% if len(parameters.groupArticlesList) > 0 %}
  
-	 <table class="table table-hover">
+	 <table class="table table-hover table-bordered">
 	     <thead>
 	     <tr>
 	         <th>Название</th>
