--- a/templates/rest/articles_list_group.html
+++ b/templates/rest/articles_list_group.html
@@ -2,7 +2,7 @@
 
    {% if len(parameters.articlesList) > 0 %}
  
-	 <table class="table table-hover">
+	 <table class="table table-hover table-bordered">
 	     <thead>
 	     <tr>
 	         <th>Название</th>
