--- a/templates/rest/members_list.html
+++ b/templates/rest/members_list.html
@@ -4,7 +4,7 @@
  
    {% if len(parameters.groupMembersList) > 0 %}
  
-	 <table class="table table-hover">
+	 <table class="table table-hover table-bordered">
 	     <thead>
 	     <tr>
 	         <th>{{_("First Name")}}</th>
