--- a/templates/my_profile.html
+++ b/templates/my_profile.html
@@ -26,9 +26,12 @@
                         <div class="row mtl">
                             <div class="col-md-3">
                                 <div class="form-group">
-                                    <div class="text-center mbl"><img src="http://lorempixel.com/640/480/business/1/" alt="" class="img-responsive"/></div>
-                                    <div class="text-center mbl"><a href="#" class="btn btn-green"><i class="fa fa-upload"></i>&nbsp;
+    {% if parameters.autor.author_id > 0 %}
+                                    <div class="text-center mbl"><img src="/static/images/rolls.gif" alt="" class="img-responsive"/></div>
+                                    <div class="text-center mbl">
+                                    <a href="/upload/{{ parameters.autor.author_id  if parameters.autor else 0 }}" class="btn btn-green"><i class="fa fa-upload"></i>&nbsp;
                                          {{_("Upload")}}</a></div>
+    {% end %}
                                 </div>
                                 <table class="table table-striped table-hover">
                                     <tbody>
