Много изменений, связанных с хранением файлов

--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,7 +3,7 @@
  
  <p><h1>Select & Upload</h1></p>
  
-<form enctype="multipart/form-data" action="/upload/{{parameters.article_id}}" method="post">
+<form enctype="multipart/form-data" action="/upload/{{parameters.article_id}}.html" method="post">
 File: <input type="file" name="filearg" multiple="multiple" />
 <br />
 <br />
